Fixed multiple read more buttons

--- a/src/html/specialchecks.html
+++ b/src/html/specialchecks.html
@@ -92,7 +92,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="operations__documentation">
+                    <div class="operations__documentation default-card">
                         <div class="operations__documentation-nav">
                             <div class="operations__documentation-block">
                                 <div>
@@ -124,7 +124,7 @@
                                                 </p>
                                             </div>
                                         </div>
-                                        <div class="operations__documentation-file hide" data-show="no">
+                                        <div class="operations__documentation-file" data-readmore-identifier="doc-list-readmore">
                                             <img src="../assets/img/images/pdf.png" alt="pdf" width="24px" height="30px">
                                             <div class="operations__documentation-content">
                                                 <H5 class="operations__documentation-description">
@@ -137,14 +137,16 @@
                                         </div>
                                     </div>
                                 </div>
+
                             </div>
                         </div>
-                        <button class="documentation__more more" type="button" id="showmore">
-                            Смотреть все
-                            <svg class="more-picture">
-                                <use href="../assets/img/svg/sprite/symbol-defs.svg#icon-more" />
-                            </svg>
-                        </button>
+                        <div class="read-more__wrapper">
+                            <div class="read-more readmore" id="doc-list-readmore">
+                                <span class="read-more__text-more">Смотреть все</span>
+                                <span class="read-more__text-less">Скрыть</span>
+                                <img src="../assets/img/svg/read-more-btn.svg" alt="">
+                            </div>
+                        </div>
                     </div>
                     <div class="rates operations__rates">
                         <div class="rates__link-item">
