--- a/src/html/distance-services.html
+++ b/src/html/distance-services.html
@@ -158,7 +158,7 @@
 						</div>
 					</div>
 				</div> -->
-				<div class="operations__documentation">
+				<!-- <div class="operations__documentation default-card">
 					<div class="operations__documentation-nav">
 						<div class="operations__documentation-block">
 							<div>
@@ -229,7 +229,7 @@
 											</p>
 										</div>
 									</div>
-									<div class="operations__documentation-file hide" data-show="no">
+									<div class="operations__documentation-file" data-readmore-identifier="doc-list-readmore">
 										<img src="../assets/img/images/word.png" alt="pdf" width="24px" height="30px">
 										<div class="operations__documentation-content">
 											<H5 class="operations__documentation-description">
@@ -244,13 +244,95 @@
 							</div>
 						</div>
 					</div>
-					<button class="documentation__more more" type="button" id="showmore">
-						Смотреть все
-						<svg class="more-picture">
-							<use href="../assets/img/svg/sprite/symbol-defs.svg#icon-more" />
-						</svg>
-					</button>
-				</div>
+					<div class="read-more__wrapper">
+                        <div class="read-more readmore" id="doc-list-readmore">
+                            <span class="read-more__text-more">Смотреть все</span>
+                            <span class="read-more__text-less">Скрыть</span>
+                            <img src="../assets/img/svg/read-more-btn.svg" alt="">
+                        </div>
+                    </div>
+				</div> -->
+				<div class="default-card m--b-35">
+						<div class="operations__documentation-nav">
+							<div type="menu__toggle" id="operations__docs" class="operations__docs">
+								<div>
+									<h3 class="operations__documentation-title">
+										Перечень документов
+									</h3>
+									<div class="operations__documentation-Link__list">
+										<a href="#" class="operations__documentation-link current-link" id="tarifs">Мобильный банк</a>
+										<a href="#" class="operations__documentation-link"
+											id="docs">Система «Интернет-банк»</a>
+									</div>
+								</div>
+								<div class="operations__documentation-list">
+									<div class="operations__documentation-kind active" id="tarifs-item">
+										<div class="operations__documentation-file">
+											<img src="../assets/img/images/pdf.png" alt="pdf" width="24px"
+												height="30px">
+											<div class="operations__documentation-content">
+												<H5 class="operations__documentation-description">
+													Общие условия комплексного банковского обслуживания
+												</H5>
+												<p class="operations__documentation-caracter">
+													PDF, 279 КБ / 04 июня 2018
+												</p>
+											</div>
+										</div>
+										<div class="operations__documentation-file"
+											data-readmore-identifier="doc-list-readmore">
+											<img src="../assets/img/images/word.png" alt="pdf" width="24px"
+												height="30px">
+											<div class="operations__documentation-content">
+												<H5 class="operations__documentation-description">
+													Перечень документов для заключения договора банковского
+													обслуживания 
+												</H5>
+												<p class="operations__documentation-caracter">
+													PDF, 279 КБ / 04 июня 2018
+												</p>
+											</div>
+										</div>
+									</div>
+									<div class="operations__documentation-kind" id="docs-item">
+										<div class="operations__documentation-file">
+											<img src="../assets/img/images/word.png" alt="pdf" width="24px"
+												height="30px">
+											<div class="operations__documentation-content">
+												<H5 class="operations__documentation-description">
+													Форма Подтверждения о присоединении 
+												</H5>
+												<p class="operations__documentation-caracter">
+													PDF, 279 КБ / 04 июня 2018
+												</p>
+											</div>
+										</div>
+										<div class="operations__documentation-file"
+											data-readmore-identifier="doc-list-readmore">
+											<img src="../assets/img/images/word.png" alt="pdf" width="24px"
+												height="30px">
+											<div class="operations__documentation-content">
+												<H5 class="operations__documentation-description">
+													Перечень документов для заключения договора банковского
+													обслуживания 
+												</H5>
+												<p class="operations__documentation-caracter">
+													PDF, 279 КБ / 04 июня 2018
+												</p>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="read-more__wrapper">
+							<div class="read-more readmore" id="doc-list-readmore">
+								<span class="read-more__text-more">Смотреть все</span>
+								<span class="read-more__text-less">Скрыть</span>
+								<img src="../assets/img/svg/read-more-btn.svg" alt="">
+							</div>
+						</div>
+					</div>
 				<div class="rates operations__rates">
 					<div class="rates__link-item">
 						<a class="rates__link" href="#">
