--- a/src/html/index.html
+++ b/src/html/index.html
@@ -2,9 +2,11 @@
     <div class="background ibg ibg--cover">
         <section class="container">
             <div class="general-description">
-                <div class="general-title">
-                    <h2>Запуск нового продукта
-                        для физических лиц: накопительный счет «МФК Сберегательный»</h2>
+                <div class="general-title__wrap">
+                    <span class="general-title">
+                        Запуск нового продукта
+                        для физических лиц: накопительный счет<b>«МФК Сберегательный»</b>
+                    </span>
                 </div>
                 <div class="general-btn">
                     <button class="btn">Узнать больше</button>
@@ -77,7 +79,8 @@
                         О банке МФК
                     </h2>
                     <p class="about-card__text">
-                        АО АКБ «МЕЖДУНАРОДНЫЙ ФИНАНСОВЫЙ КЛУБ» (Банк МФК) предоставляет полный спектр финансовых услуг
+                        <span class="text--dark-blue">АО АКБ «МЕЖДУНАРОДНЫЙ ФИНАНСОВЫЙ КЛУБ» (Банк МФК)</span>
+                        предоставляет полный спектр финансовых услуг
                         крупным корпоративным
                         и частным состоятельным клиентам.
                         Банк осуществляет свою деятельность на основании генеральной лицензии № 2618, выданной Банком
@@ -85,7 +88,8 @@
                         года. Акционеры банка — Игнатова Е. С., Орлова Т. Д, Прохоров М. Д., Onexim Holdings Limited.
                     </p>
                     <p class="about-card__text">
-                        Банк МФК входит в систему обязательного страхования вкладов, участник Национальной финансовой
+                        Банк МФК входит в <span class="text--dark-blue">систему обязательного страхования
+                            вкладов</span>, участник Национальной финансовой
                         ассоциации и ПАО
                         Московская Биржа. Банк МФК является членом Ассоциации российских банков (АРБ).
                     </p>
