Adjusted fonts on lifestyle and fixed savingsaccount readmore

--- a/src/html/deposits.html
+++ b/src/html/deposits.html
@@ -534,7 +534,7 @@
 					</div>	
 				</div>
 				
-				<div class="document-list deposits-list">
+				<div class="document-list">
 					<div class="document-list__card">
 						<div class="document-list__content-wrapper">
 							<div class="document-list__title-block">
