--- a/src/html/lifestyle.html
+++ b/src/html/lifestyle.html
@@ -20,16 +20,16 @@
                                 Lifestyle
                             </h1>
                             <div class="lifestyle-about m--b-45">
-                                <p class="lifestyle-about__text">
+                                <p class="lifestyle-about__text text--400 text--white text--M">
                                     Как известно, нужно не только уметь заработать деньги, но и правильно ими
                                     распорядиться.
                                 </p>
-                                <p class="lifestyle-about__text">
+                                <p class="lifestyle-about__text text--400 text--white text--M">
                                     Банк МФК стремится всегда и во всем помогать своим клиентам и готов предоставить
                                     самый качественный сервис, выступая
                                     советчиком, поверенным и посредником.
                                 </p>
-                                <p class="lifestyle-about__text">
+                                <p class="lifestyle-about__text text--400 text--white text--M">
                                     Организация дополнительного индивидуального сервиса требует от специалистов банка не
                                     только необходимых знаний и
                                     навыков, но и настоящего вдохновения, что позволяет нашим клиентам ощутить всю
