--- a/src/html/savingsaccount.html
+++ b/src/html/savingsaccount.html
@@ -164,7 +164,62 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="operations__documentation savingsaccount__documentation">
+                            <div class="operations__documentation default-card">
+                                <div class="operations__documentation-nav">
+                                    <div class="operations__documentation-block">
+                                        <div>
+                                            <h3 class="operations__documentation-title">
+                                                Документы, оформляемые для целей валютного контроля
+                                            </h3>
+                                        </div>
+                                        <div class="operations__documentation-list">
+                                            <div class="operations__documentation-kind active">
+                                                <div class="operations__documentation-file">
+                                                    <img src="../assets/img/images/pdf.png" alt="pdf" width="24px" height="30px">
+                                                    <div class="operations__documentation-content">
+                                                        <H5 class="operations__documentation-description">
+                                                            Заявление о постановке на учет контракта (кредитного договора)
+                                                        </H5>
+                                                        <p class="operations__documentation-caracter">
+                                                            PDF, 279 КБ / 04 июня 2018
+                                                        </p>
+                                                    </div>
+                                                </div>
+                                                <div class="operations__documentation-file">
+                                                    <img src="../assets/img/images/pdf.png" alt="pdf" width="24px" height="30px">
+                                                    <div class="operations__documentation-content">
+                                                        <H5 class="operations__documentation-description">
+                                                            Сведения о валютных операциях
+                                                        </H5>
+                                                        <p class="operations__documentation-caracter">
+                                                            PDF, 279 КБ / 04 июня 2018
+                                                        </p>
+                                                    </div>
+                                                </div>
+                                                <div class="operations__documentation-file" data-readmore-identifier="doc-list-readmore">
+                                                    <img src="../assets/img/images/pdf.png" alt="pdf" width="24px" height="30px">
+                                                    <div class="operations__documentation-content">
+                                                        <H5 class="operations__documentation-description">
+                                                            Справка о подтверждающих документах
+                                                        </H5>
+                                                        <p class="operations__documentation-caracter">
+                                                            PDF, 279 КБ / 04 июня 2018
+                                                        </p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="read-more__wrapper">
+                                    <div class="read-more readmore" id="doc-list-readmore">
+                                        <span class="read-more__text-more">Смотреть все</span>
+                                        <span class="read-more__text-less">Скрыть</span>
+                                        <img src="../assets/img/svg/read-more-btn.svg" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                           <!--  <div class="operations__documentation savingsaccount__documentation">
                                 <div class="operations__documentation-nav">
                                     <div class="operations__documentation-block">
                                         <div>
@@ -233,7 +288,7 @@
                                         <use href="../assets/img/svg/sprite/symbol-defs.svg#icon-more" />
                                     </svg>
                                 </button>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
