Added the apps block to online bank and moved the new header block to deposits

--- a/src/html/deposits.html
+++ b/src/html/deposits.html
@@ -5,15 +5,33 @@
 		<!-- Main content-->
 
 		<section class="container">
-			<div class="second__header">
-				<div class="second__text-list">
-					<a class="second__text" href="#">Главная /</a>
-					<a class="second__text" href="./accountopen.html">Корпоративным клиентам /</a>
-					<a class="second__text current-second__text" href="./deposits.html">Депозиты</a>
+			<div class="container">
+				<div class="deposits-breadcrumbs--mobile">
+					<div class="breadcrumbs">
+						<div class="breadcrumbs__step"><a href="/">Главная</a></div>
+						<div class="breadcrumbs__step"><a href="accountopen.html">Корпоративным клиентам</a></div>
+						<div class="breadcrumbs__step"><span>Депозиты</span></div>
+					</div>
 				</div>
-				<div class="second__title">
-					<h2 class="second__title-text">Депозиты</h2>
+			</div>
+			<div class="deposits__general m--b-50 ibg ibg--cover ratio-w" style="margin-bottom: 50px;"
+				data-ratio-multiplier="0.35">
+				<div class="container">
+					<div class="deposits-breadcrumbs">
+						<div class="breadcrumbs">
+							<div class="breadcrumbs__step"><a href="/">Главная</a></div>
+							<div class="breadcrumbs__step"><a href="accountopen.html">Корпоративным клиентам</a></div>
+							<div class="breadcrumbs__step"><span>Депозиты</span></div>
+						</div>
+					</div>
 				</div>
+				<div
+					class="deposits__title p--l-25 text--700 text--white text--XL text--uppercase sm-p--t-35">
+					<h1>
+						Депозиты vip
+					</h1>
+				</div>
+				<img src="../assets/img/images/main-deposite.jpg" alt="">
 			</div>
 			<div>
 				<div class="filters m--b-25 fx fx-wr--w fx-ai--c fx-jc--s md-fx-jc--sa xsm-fx-jc--c" data-filtered-items-container-id="deposit-items" data-auto-update="false" >
