--- a/src/html/index.html
+++ b/src/html/index.html
@@ -51,34 +51,45 @@
                     </div>
                 </div>
             </div>
+
             <div class="general-about">
                 <div class="about-card__wrapper">
-                    <h2 class="about-card__title">
-                        Ипотечное кредитование
-                    </h2>
-                    <h3 class="about-card__posttitle">
-                        Решение квартирного вопроса
-                    </h3>
-                    <p class="about-card__text">
-                        Размер кредита
-                    </p>
-                    <h2 class="about-card__title">
-                        до 7 000 000 рублей
-                    </h2>
-                    <p class="about-card__text">
-                        Годовая ставка
-                    </p>
-                    <h2 class="about-card__title">
-                        от 8,9%
-                    </h2>
-                    <button class="btn">Подробнее</button>
-                    <img src="../assets/img/images/house.jpg" alt="house">
+                    <div class="about-card__title-wrap">
+                        <h2 class="about-card__title m--b-15">
+                            Ипотечное кредитование
+                        </h2>
+                        <h3 class="about-card__posttitle">
+                            Решение квартирного вопроса
+                        </h3>
+                    </div>
+                    <div class="about-card__text-wrap m--b-45">
+                        <p class="about-card__text m--b-10">
+                            Размер кредита
+                        </p>
+                        <h2 class="about-card__title">
+                            до 7 000 000 рублей
+                        </h2>
+                    </div>
+                    <div class="about-card__text-wrapper">
+                        <div class="about-card__text-wrap ">
+                            <p class="about-card__text m--b-10">
+                                Годовая ставка
+                            </p>
+                            <h2 class="about-card__title m--b-50">
+                                от 8,9%
+                            </h2>
+                            <button class="btn btn--width">Подробнее</button>
+                        </div>
+                        <div class="about-card__img-wrap">
+                            <img class="about-card__img" src="../assets/img/images/house.jpg" alt="house">
+                        </div>
+                    </div>
                 </div>
                 <div class="about-card__wrapper">
-                    <h2 class="about-card__title">
+                    <h2 class="about-card__title m--b-15">
                         О банке МФК
                     </h2>
-                    <p class="about-card__text">
+                    <p class="about-card__text m--b-35">
                         <span class="text--dark-blue">АО АКБ «МЕЖДУНАРОДНЫЙ ФИНАНСОВЫЙ КЛУБ» (Банк МФК)</span>
                         предоставляет полный спектр финансовых услуг
                         крупным корпоративным
@@ -87,14 +98,29 @@
                         России 29 февраля 2016
                         года. Акционеры банка — Игнатова Е. С., Орлова Т. Д, Прохоров М. Д., Onexim Holdings Limited.
                     </p>
-                    <p class="about-card__text">
+                    <p class="about-card__text m--b-45">
                         Банк МФК входит в <span class="text--dark-blue">систему обязательного страхования
                             вкладов</span>, участник Национальной финансовой
                         ассоциации и ПАО
                         Московская Биржа. Банк МФК является членом Ассоциации российских банков (АРБ).
                     </p>
+                    <!-- <p class="about-card__text m--b-45" data-readmore-identifier="info-list-readmore">
+                        Банк МФК входит в <span class="text--dark-blue">систему обязательного страхования
+                            вкладов</span>, участник Национальной финансовой
+                        ассоциации и ПАО
+                        Московская Биржа. Банк МФК является членом Ассоциации российских банков (АРБ).
+                    </p> -->
+                    <div class="document-list__read-more read-more__wrapper">
+                        <div class="read-more readmore" id="info-list-readmore">
+                            <span class="read-more__text-more">Читать больше</span>
+                            <span class="read-more__text-less">Скрыть</span>
+                            <img src="../assets/img/svg/read-more-btn.svg" alt="">
+                        </div>
+                    </div>
                 </div>
             </div>
+            <div class="management"></div>
+
         </div>
     </section>
 
