--- a/src/html/deposits.html
+++ b/src/html/deposits.html
@@ -572,7 +572,7 @@
 													Банка</span>
 											</div>
 											<div class="document-list__document__description">
-												<span>PDF, 279 КБ / 04 июня 2018</span>
+												<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 											</div>
 										</div>
 									</div>
@@ -587,7 +587,7 @@
 												<span>Перечень документов для экспресс-анализа</span>
 											</div>
 											<div class="document-list__document__description">
-												<span>PDF, 279 КБ / 04 июня 2018</span>
+												<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 											</div>
 										</div>
 									</div>
@@ -602,7 +602,7 @@
 												<span>Общие условия комплексного банковского обслуживания</span>
 											</div>
 											<div class="document-list__document__description">
-												<span>PDF, 279 КБ / 04 июня 2018</span>
+												<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 											</div>
 										</div>
 									</div>
@@ -617,7 +617,7 @@
 												<span>Заявление об открытии счета</span>
 											</div>
 											<div class="document-list__document__description">
-												<span>PDF, 279 КБ / 04 июня 2018</span>
+												<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 											</div>
 										</div>
 									</div>
@@ -632,7 +632,7 @@
 												<span>Общие условия комплексного банковского обслуживания</span>
 											</div>
 											<div class="document-list__document__description">
-												<span>PDF, 279 КБ / 04 июня 2018</span>
+												<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 											</div>
 										</div>
 									</div>
@@ -648,7 +648,7 @@
 													Банка</span>
 											</div>
 											<div class="document-list__document__description">
-												<span>PDF, 279 КБ / 04 июня 2018</span>
+												<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 											</div>
 										</div>
 									</div>
