--- a/src/html/online-bank.html
+++ b/src/html/online-bank.html
@@ -173,7 +173,7 @@
 														приложение в системе «МФК-Онлайн»</span>
 												</div>
 												<div class="document-list__document__description">
-													<span>PDF, 279 КБ / 04 июня 2018</span>
+													<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 												</div>
 											</div>
 										</div>
@@ -189,7 +189,7 @@
 														обслуживания</span>
 												</div>
 												<div class="document-list__document__description">
-													<span>PDF, 279 КБ / 04 июня 2018</span>
+													<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 												</div>
 											</div>
 										</div>
@@ -205,7 +205,7 @@
 														с использованием системы интернет-банк «МФК-Онлайн»</span>
 												</div>
 												<div class="document-list__document__description">
-													<span>PDF, 279 КБ / 04 июня 2018</span>
+													<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 												</div>
 											</div>
 										</div>
@@ -220,7 +220,7 @@
 													<span>Заявление на подключение к системе Интернет-банк</span>
 												</div>
 												<div class="document-list__document__description">
-													<span>PDF, 279 КБ / 04 июня 2018</span>
+													<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 												</div>
 											</div>
 										</div>
@@ -235,7 +235,7 @@
 													<span>Общие условия комплексного банковского обслуживания</span>
 												</div>
 												<div class="document-list__document__description">
-													<span>PDF, 279 КБ / 04 июня 2018</span>
+													<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 												</div>
 											</div>
 										</div>
@@ -251,7 +251,7 @@
 														Банка</span>
 												</div>
 												<div class="document-list__document__description">
-													<span>PDF, 279 КБ / 04 июня 2018</span>
+													<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 												</div>
 											</div>
 										</div>
