--- a/src/html/tarif.html
+++ b/src/html/tarif.html
@@ -13,7 +13,7 @@
                     <a class="second__text-credits current-second__text-credits" href="./tarif.html">Тарифы</a>
                 </div>
             </div>
-            <div class="operations">
+            <div class="operations page">
                 <div class="page__sidebar sidebar">
                     <div class="sidebar__overlay"></div>
                     <div class="sidebar__items">
