--- a/src/html/accountopen.html
+++ b/src/html/accountopen.html
@@ -124,7 +124,7 @@
 													Общие условия комплексного банковского обслуживания
 												</H5>
 												<p class="operations__documentation-caracter">
-													PDF, 279 КБ / 04 июня 2018
+													<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 												</p>
 											</div>
 										</div>
@@ -138,7 +138,7 @@
 													обслуживания 
 												</H5>
 												<p class="operations__documentation-caracter">
-													PDF, 279 КБ / 04 июня 2018
+													<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 												</p>
 											</div>
 										</div>
@@ -152,7 +152,7 @@
 													Форма Подтверждения о присоединении 
 												</H5>
 												<p class="operations__documentation-caracter">
-													PDF, 279 КБ / 04 июня 2018
+													<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 												</p>
 											</div>
 										</div>
@@ -166,7 +166,7 @@
 													обслуживания 
 												</H5>
 												<p class="operations__documentation-caracter">
-													PDF, 279 КБ / 04 июня 2018
+													<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 												</p>
 											</div>
 										</div>
@@ -180,7 +180,7 @@
 													Общие условия комплексного банковского обслуживания
 												</H5>
 												<p class="operations__documentation-caracter">
-													PDF, 279 КБ / 04 июня 2018
+													<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 												</p>
 											</div>
 										</div>
@@ -194,7 +194,7 @@
 													обслуживания 
 												</H5>
 												<p class="operations__documentation-caracter">
-													PDF, 279 КБ / 04 июня 2018
+													<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 												</p>
 											</div>
 										</div>
@@ -208,7 +208,7 @@
 													Форма Подтверждения о присоединении 
 												</H5>
 												<p class="operations__documentation-caracter">
-													PDF, 279 КБ / 04 июня 2018
+													<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 												</p>
 											</div>
 										</div>
@@ -222,7 +222,7 @@
 													обслуживания 
 												</H5>
 												<p class="operations__documentation-caracter">
-													PDF, 279 КБ / 04 июня 2018
+													<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 												</p>
 											</div>
 										</div>
@@ -377,7 +377,7 @@
 												Общие условия комплексного банковского обслуживания
 											</H5>
 											<p class="operations__documentation-caracter">
-												PDF, 279 КБ / 04 июня 2018
+												<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 											</p>
 										</div>
 									</div>
@@ -388,7 +388,7 @@
 												Перечень документов для заключения договора банковского обслуживания 
 											</H5>
 											<p class="operations__documentation-caracter">
-												PDF, 279 КБ / 04 июня 2018
+												<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 											</p>
 										</div>
 									</div>
@@ -401,7 +401,7 @@
 												Форма Подтверждения о присоединении 
 											</H5>
 											<p class="operations__documentation-caracter">
-												PDF, 279 КБ / 04 июня 2018
+												<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 											</p>
 										</div>
 									</div>
@@ -412,7 +412,7 @@
 												Перечень документов для заключения договора банковского обслуживания 
 											</H5>
 											<p class="operations__documentation-caracter">
-												PDF, 279 КБ / 04 июня 2018
+												<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 											</p>
 										</div>
 									</div>
@@ -425,7 +425,7 @@
 												Общие условия комплексного банковского обслуживания
 											</H5>
 											<p class="operations__documentation-caracter">
-												PDF, 279 КБ / 04 июня 2018
+												<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 											</p>
 										</div>
 									</div>
@@ -436,7 +436,7 @@
 												Перечень документов для заключения договора банковского обслуживания 
 											</H5>
 											<p class="operations__documentation-caracter">
-												PDF, 279 КБ / 04 июня 2018
+												<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 											</p>
 										</div>
 									</div>
@@ -449,7 +449,7 @@
 												Форма Подтверждения о присоединении 
 											</H5>
 											<p class="operations__documentation-caracter">
-												PDF, 279 КБ / 04 июня 2018
+												<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 											</p>
 										</div>
 									</div>
@@ -460,7 +460,7 @@
 												Перечень документов для заключения договора банковского обслуживания 
 											</H5>
 											<p class="operations__documentation-caracter">
-												PDF, 279 КБ / 04 июня 2018
+												<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 											</p>
 										</div>
 									</div>
