--- a/src/html/brokers.html
+++ b/src/html/brokers.html
@@ -124,7 +124,7 @@
                                                                 Банка</span>
                                                         </div>
                                                         <div class="document-list__document__description">
-                                                            <span>PDF, 279 КБ / 04 июня 2018</span>
+                                                            <a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -141,7 +141,7 @@
                                                                 Банка</span>
                                                         </div>
                                                         <div class="document-list__document__description">
-                                                            <span>PDF, 279 КБ / 04 июня 2018</span>
+                                                            <a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -159,7 +159,7 @@
                                                                 Банка</span>
                                                         </div>
                                                         <div class="document-list__document__description">
-                                                            <span>PDF, 279 КБ / 04 июня 2018</span>
+                                                            <a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -177,7 +177,7 @@
                                                                 ценных бумаг физическим лицам</span>
                                                         </div>
                                                         <div class="document-list__document__description">
-                                                            <span>PDF, 279 КБ / 04 июня 2018</span>
+                                                            <a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -193,7 +193,7 @@
                                                                 клиентов</span>
                                                         </div>
                                                         <div class="document-list__document__description">
-                                                            <span>PDF, 279 КБ / 04 июня 2018</span>
+                                                            <a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -211,7 +211,7 @@
                                                                 Банка</span>
                                                         </div>
                                                         <div class="document-list__document__description">
-                                                            <span>PDF, 279 КБ / 04 июня 2018</span>
+                                                            <a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
                                                         </div>
                                                     </div>
                                                 </div>
