--- a/src/html/cards.html
+++ b/src/html/cards.html
@@ -98,7 +98,7 @@
 									<span>MasterCard Gold</span>
 								</div>
 							</div>
-							<div class="card-list__card__info-primary">
+							<!-- <div class="card-list__card__info-primary">
 								<div class="card-list__info-block">
 									<div class="card-list__info-block__description">
 										<span>Стоимость обслуживания</span>
@@ -115,9 +115,17 @@
 										<img src="../assets/img/images/Accept.png" alt="">
 									</div>
 								</div>
-							</div>
+							</div> -->
 							<div class="card-list__card__info-secondary">
 								<div class="card-list__card__info-wrapper">
+									<div class="card-list__info-block">
+										<div class="card-list__info-block__description">
+											<span>Стоимость обслуживания</span>
+										</div>
+										<div class="card-list__info-block__info">
+											<span>600 руб</span>
+										</div>
+									</div>
 									<div class="card-list__info-block">
 										<div class="card-list__info-block__description">
 											<span>Срок действия</span>
@@ -136,6 +144,14 @@
 									</div>
 								</div>
 								<div class="card-list__card__advantages-wrapper">
+									<div class="card-list__advantage">
+										<div class="card-list__advantage__description">
+											<span>SMS-информирование</span>
+										</div>
+										<div class="card-list__advantage__icon">
+											<img src="../assets/img/images/Accept.png" alt="">
+										</div>
+									</div>
 									<div class="card-list__advantage">
 										<div class="card-list__advantage__description">
 											<span>Безопасность интернет платежей</span>
@@ -169,7 +185,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="card-list__card filtered" data-filtered-type="wage">
+					<div class="card-list__card filtered" data-filtered-type="classic">
 						<div class="card-list__card__content-wrapper">
 							<div class="card-list__card__preview">
 								<img src="../assets/img/images/gold-mastercard.png" alt="">
@@ -182,7 +198,7 @@
 									<span>MasterCard Gold</span>
 								</div>
 							</div>
-							<div class="card-list__card__info-primary">
+							<!-- <div class="card-list__card__info-primary">
 								<div class="card-list__info-block">
 									<div class="card-list__info-block__description">
 										<span>Стоимость обслуживания</span>
@@ -199,9 +215,17 @@
 										<img src="../assets/img/images/Accept.png" alt="">
 									</div>
 								</div>
-							</div>
+							</div> -->
 							<div class="card-list__card__info-secondary">
 								<div class="card-list__card__info-wrapper">
+									<div class="card-list__info-block">
+										<div class="card-list__info-block__description">
+											<span>Стоимость обслуживания</span>
+										</div>
+										<div class="card-list__info-block__info">
+											<span>600 руб</span>
+										</div>
+									</div>
 									<div class="card-list__info-block">
 										<div class="card-list__info-block__description">
 											<span>Срок действия</span>
@@ -220,6 +244,14 @@
 									</div>
 								</div>
 								<div class="card-list__card__advantages-wrapper">
+									<div class="card-list__advantage">
+										<div class="card-list__advantage__description">
+											<span>SMS-информирование</span>
+										</div>
+										<div class="card-list__advantage__icon">
+											<img src="../assets/img/images/Accept.png" alt="">
+										</div>
+									</div>
 									<div class="card-list__advantage">
 										<div class="card-list__advantage__description">
 											<span>Безопасность интернет платежей</span>
@@ -253,8 +285,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="card-list__card filtered" data-filtered-type="cumulative"
-						data-readmore-identifier="card-list-readmore">
+					<div class="card-list__card filtered" data-filtered-type="classic">
 						<div class="card-list__card__content-wrapper">
 							<div class="card-list__card__preview">
 								<img src="../assets/img/images/gold-mastercard.png" alt="">
@@ -267,7 +298,7 @@
 									<span>MasterCard Gold</span>
 								</div>
 							</div>
-							<div class="card-list__card__info-primary">
+							<!-- <div class="card-list__card__info-primary">
 								<div class="card-list__info-block">
 									<div class="card-list__info-block__description">
 										<span>Стоимость обслуживания</span>
@@ -284,9 +315,17 @@
 										<img src="../assets/img/images/Accept.png" alt="">
 									</div>
 								</div>
-							</div>
+							</div> -->
 							<div class="card-list__card__info-secondary">
 								<div class="card-list__card__info-wrapper">
+									<div class="card-list__info-block">
+										<div class="card-list__info-block__description">
+											<span>Стоимость обслуживания</span>
+										</div>
+										<div class="card-list__info-block__info">
+											<span>600 руб</span>
+										</div>
+									</div>
 									<div class="card-list__info-block">
 										<div class="card-list__info-block__description">
 											<span>Срок действия</span>
@@ -305,6 +344,14 @@
 									</div>
 								</div>
 								<div class="card-list__card__advantages-wrapper">
+									<div class="card-list__advantage">
+										<div class="card-list__advantage__description">
+											<span>SMS-информирование</span>
+										</div>
+										<div class="card-list__advantage__icon">
+											<img src="../assets/img/images/Accept.png" alt="">
+										</div>
+									</div>
 									<div class="card-list__advantage">
 										<div class="card-list__advantage__description">
 											<span>Безопасность интернет платежей</span>
@@ -338,8 +385,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="card-list__card filtered" data-filtered-type="pension"
-						data-readmore-identifier="card-list-readmore">
+					<div class="card-list__card filtered" data-filtered-type="classic">
 						<div class="card-list__card__content-wrapper">
 							<div class="card-list__card__preview">
 								<img src="../assets/img/images/gold-mastercard.png" alt="">
@@ -352,7 +398,7 @@
 									<span>MasterCard Gold</span>
 								</div>
 							</div>
-							<div class="card-list__card__info-primary">
+							<!-- <div class="card-list__card__info-primary">
 								<div class="card-list__info-block">
 									<div class="card-list__info-block__description">
 										<span>Стоимость обслуживания</span>
@@ -369,9 +415,17 @@
 										<img src="../assets/img/images/Accept.png" alt="">
 									</div>
 								</div>
-							</div>
+							</div> -->
 							<div class="card-list__card__info-secondary">
 								<div class="card-list__card__info-wrapper">
+									<div class="card-list__info-block">
+										<div class="card-list__info-block__description">
+											<span>Стоимость обслуживания</span>
+										</div>
+										<div class="card-list__info-block__info">
+											<span>600 руб</span>
+										</div>
+									</div>
 									<div class="card-list__info-block">
 										<div class="card-list__info-block__description">
 											<span>Срок действия</span>
@@ -390,6 +444,14 @@
 									</div>
 								</div>
 								<div class="card-list__card__advantages-wrapper">
+									<div class="card-list__advantage">
+										<div class="card-list__advantage__description">
+											<span>SMS-информирование</span>
+										</div>
+										<div class="card-list__advantage__icon">
+											<img src="../assets/img/images/Accept.png" alt="">
+										</div>
+									</div>
 									<div class="card-list__advantage">
 										<div class="card-list__advantage__description">
 											<span>Безопасность интернет платежей</span>
