--- a/src/html/credits.html
+++ b/src/html/credits.html
@@ -141,7 +141,6 @@
 							<span>
 								Документы
 							</span>
-
 						</div>
 						<div class="document-list__list-block">
 							<div class="document-list__document">
@@ -155,7 +154,7 @@
 												Банка</span>
 										</div>
 										<div class="document-list__document__description">
-											<span>PDF, 279 КБ / 04 июня 2018</span>
+											<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 										</div>
 									</div>
 								</div>
@@ -170,7 +169,7 @@
 											<span>Перечень документов для экспресс-анализа</span>
 										</div>
 										<div class="document-list__document__description">
-											<span>PDF, 279 КБ / 04 июня 2018</span>
+											<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 										</div>
 									</div>
 								</div>
@@ -185,7 +184,7 @@
 											<span>Общие условия комплексного банковского обслуживания</span>
 										</div>
 										<div class="document-list__document__description">
-											<span>PDF, 279 КБ / 04 июня 2018</span>
+											<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 										</div>
 									</div>
 								</div>
@@ -200,7 +199,7 @@
 											<span>Заявление об открытии счета</span>
 										</div>
 										<div class="document-list__document__description">
-											<span>PDF, 279 КБ / 04 июня 2018</span>
+											<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 										</div>
 									</div>
 								</div>
@@ -215,7 +214,7 @@
 											<span>Общие условия комплексного банковского обслуживания</span>
 										</div>
 										<div class="document-list__document__description">
-											<span>PDF, 279 КБ / 04 июня 2018</span>
+											<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 										</div>
 									</div>
 								</div>
@@ -231,7 +230,7 @@
 												Банка</span>
 										</div>
 										<div class="document-list__document__description">
-											<span>PDF, 279 КБ / 04 июня 2018</span>
+											<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 										</div>
 									</div>
 								</div>
