--- a/src/html/distance-services.html
+++ b/src/html/distance-services.html
@@ -179,7 +179,7 @@
 												Правила дистанционного банковского обслуживания
 											</H5>
 											<p class="operations__documentation-caracter">
-												PDF, 279 КБ / 04 июня 2018
+												<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 											</p>
 										</div>
 									</div>
@@ -190,7 +190,7 @@
 												Заявление на подключение к системе «Интернет-банк»
 											</H5>
 											<p class="operations__documentation-caracter">
-												PDF, 279 КБ / 04 июня 2018
+												<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 											</p>
 										</div>
 									</div>
@@ -201,7 +201,7 @@
 												Заявление на изменение прав доступа в систему «Интернет-банк»
 											</H5>
 											<p class="operations__documentation-caracter">
-												PDF, 279 КБ / 04 июня 2018
+												<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 											</p>
 										</div>
 									</div>
@@ -214,7 +214,7 @@
 												Правила дистанционного банковского обслуживания
 											</H5>
 											<p class="operations__documentation-caracter">
-												PDF, 279 КБ / 04 июня 2018
+												<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 											</p>
 										</div>
 									</div>
@@ -225,7 +225,7 @@
 												Заявление на подключение к системе «Интернет-банк»
 											</H5>
 											<p class="operations__documentation-caracter">
-												PDF, 279 КБ / 04 июня 2018
+												<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 											</p>
 										</div>
 									</div>
@@ -236,7 +236,7 @@
 												Заявление на изменение прав доступа в систему «Интернет-банк»
 											</H5>
 											<p class="operations__documentation-caracter">
-												PDF, 279 КБ / 04 июня 2018
+												<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 											</p>
 										</div>
 									</div>
@@ -275,7 +275,7 @@
 												Общие условия комплексного банковского обслуживания
 											</H5>
 											<p class="operations__documentation-caracter">
-												PDF, 279 КБ / 04 июня 2018
+												<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 											</p>
 										</div>
 									</div>
@@ -289,7 +289,7 @@
 												обслуживания 
 											</H5>
 											<p class="operations__documentation-caracter">
-												PDF, 279 КБ / 04 июня 2018
+												<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 											</p>
 										</div>
 									</div>
@@ -303,7 +303,7 @@
 												Форма Подтверждения о присоединении 
 											</H5>
 											<p class="operations__documentation-caracter">
-												PDF, 279 КБ / 04 июня 2018
+												<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 											</p>
 										</div>
 									</div>
@@ -317,7 +317,7 @@
 												обслуживания 
 											</H5>
 											<p class="operations__documentation-caracter">
-												PDF, 279 КБ / 04 июня 2018
+												<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 											</p>
 										</div>
 									</div>
