--- a/src/html/garanty.html
+++ b/src/html/garanty.html
@@ -175,7 +175,7 @@
 												Банка</span>
 										</div>
 										<div class="document-list__document__description">
-											<span>PDF, 279 КБ / 04 июня 2018</span>
+											<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 										</div>
 									</div>
 								</div>
@@ -190,7 +190,7 @@
 											<span>Перечень документов для экспресс-анализа</span>
 										</div>
 										<div class="document-list__document__description">
-											<span>PDF, 279 КБ / 04 июня 2018</span>
+											<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 										</div>
 									</div>
 								</div>
@@ -205,7 +205,7 @@
 											<span>Общие условия комплексного банковского обслуживания</span>
 										</div>
 										<div class="document-list__document__description">
-											<span>PDF, 279 КБ / 04 июня 2018</span>
+											<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 										</div>
 									</div>
 								</div>
@@ -220,7 +220,7 @@
 											<span>Заявление об открытии счета</span>
 										</div>
 										<div class="document-list__document__description">
-											<span>PDF, 279 КБ / 04 июня 2018</span>
+											<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 										</div>
 									</div>
 								</div>
@@ -235,7 +235,7 @@
 											<span>Общие условия комплексного банковского обслуживания</span>
 										</div>
 										<div class="document-list__document__description">
-											<span>PDF, 279 КБ / 04 июня 2018</span>
+											<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 										</div>
 									</div>
 								</div>
@@ -251,7 +251,7 @@
 												Банка</span>
 										</div>
 										<div class="document-list__document__description">
-											<span>PDF, 279 КБ / 04 июня 2018</span>
+											<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
 										</div>
 									</div>
 								</div>
