--- a/src/html/rko.html
+++ b/src/html/rko.html
@@ -102,7 +102,7 @@
                                                         консультационного обслуживания VIP — клиентов 
                                                     </H5>
                                                     <p class="operations__documentation-caracter">
-                                                        PDF, 279 КБ / 04 июня 2018
+                                                    	<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
                                                     </p>
                                                 </div>
                                             </div>
@@ -115,7 +115,7 @@
                                                         консультационного обслуживания VIP — клиентов
                                                     </H5>
                                                     <p class="operations__documentation-caracter">
-                                                        PDF, 279 КБ / 04 июня 2018
+                                                    	<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
                                                     </p>
                                                 </div>
                                             </div>
@@ -128,7 +128,7 @@
                                                         Правила дистанционного банковского обслуживания
                                                     </H5>
                                                     <p class="operations__documentation-caracter">
-                                                        PDF, 279 КБ / 04 июня 2018
+                                                    	<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
                                                     </p>
                                                 </div>
                                             </div>
