--- a/src/html/savingsaccount.html
+++ b/src/html/savingsaccount.html
@@ -181,7 +181,7 @@
                                                             Заявление о постановке на учет контракта (кредитного договора)
                                                         </H5>
                                                         <p class="operations__documentation-caracter">
-                                                            PDF, 279 КБ / 04 июня 2018
+                                                        	<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
                                                         </p>
                                                     </div>
                                                 </div>
@@ -192,7 +192,7 @@
                                                             Сведения о валютных операциях
                                                         </H5>
                                                         <p class="operations__documentation-caracter">
-                                                            PDF, 279 КБ / 04 июня 2018
+                                                        	<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
                                                         </p>
                                                     </div>
                                                 </div>
@@ -203,7 +203,7 @@
                                                             Справка о подтверждающих документах
                                                         </H5>
                                                         <p class="operations__documentation-caracter">
-                                                            PDF, 279 КБ / 04 июня 2018
+                                                        	<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
                                                         </p>
                                                     </div>
                                                 </div>
@@ -238,7 +238,7 @@
                                                             физического лица
                                                         </H5>
                                                         <p class="operations__documentation-caracter">
-                                                            PDF, 279 КБ / 04 июня 2018
+                                                        	<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
                                                         </p>
                                                     </div>
                                                 </div>
@@ -250,7 +250,7 @@
                                                             Заявление на открытие счета МФК Сберегательный
                                                         </H5>
                                                         <p class="operations__documentation-caracter">
-                                                            PDF, 279 КБ / 04 июня 2018
+                                                        	<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
                                                         </p>
                                                     </div>
                                                 </div>
@@ -262,7 +262,7 @@
                                                             Заявление на закрытие счета «МФК Сберегательный»
                                                         </H5>
                                                         <p class="operations__documentation-caracter">
-                                                            PDF, 279 КБ / 04 июня 2018
+                                                        	<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
                                                         </p>
                                                     </div>
                                                 </div>
@@ -274,7 +274,7 @@
                                                             Заявление на закрытие и открытие счета «МФК Сберегательный»
                                                         </H5>
                                                         <p class="operations__documentation-caracter">
-                                                            PDF, 279 КБ / 04 июня 2018
+                                                        	<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
                                                         </p>
                                                     </div>
                                                 </div>
