Added def-text, modal and vip card

--- a/src/html/deposits.html
+++ b/src/html/deposits.html
@@ -28,33 +28,24 @@
 				<div
 					class="deposits__title p--l-25 text--700 text--white text--XL text--uppercase sm-p--t-35">
 					<h1>
-						Депозиты vip
+						Депозиты
 					</h1>
 				</div>
 				<img src="../assets/img/images/main-deposite.jpg" alt="">
 			</div>
 			<div>
-				<div class="filters m--b-25 fx fx-wr--w fx-ai--c fx-jc--s md-fx-jc--sa xsm-fx-jc--c" data-filtered-items-container-id="deposit-items" data-auto-update="false" >
+				<div class="filters m--b-25 fx fx-wr--w fx-ai--c fx-jc--s md-fx-jc--sa xsm-fx-jc--c" data-filtered-items-container-id="deposit-items" data-auto-update="true" >
 					<div class="filter fx m--10 md-fx-od--3 md-fx-el--50 xsm-fx-el--100 p--r-25" data-filter-type="boolean" data-truthfull-selector="input:checked.filter-trigger" data-filter-name='condition1'>
 						<input class="checkbox filter-trigger" type="checkbox" name="filter" id="vostrebovanie">
 						<label class="filter-trigger" for="vostrebovanie">Досрочное полное востребование</label>
-						<div class="filter-disabler">
-							<input type="checkbox">
-						</div>
 					</div>
 					<div class="filter fx m--10 md-fx-od--3 md-fx-el--50 xsm-fx-el--100 p--r-25" data-filter-type="boolean" data-truthfull-selector="input:checked.filter-trigger" data-filter-name='condition2'>
 						<input class="checkbox filter-trigger" type="checkbox" name="filter" id="vznos">
 						<label class="filter-trigger" for="vznos">Дополнительные взносы</label>
-						<div class="filter-disabler">
-							<input type="checkbox">
-						</div>
 					</div>
 					<div class="filter fx m--10 md-fx-od--3 md-fx-el--50 xsm-fx-el--100 p--r-25" data-filter-type="boolean" data-truthfull-selector="input:checked.filter-trigger" data-filter-name='condition3'>
 						<input class="checkbox filter-trigger" type="checkbox" name="filter" id="partvostrebovanie">
 						<label class="filter-trigger" for="partvostrebovanie">Частичное востребование</label>
-						<div class="filter-disabler">
-							<input type="checkbox">
-						</div>
 					</div>
 					<div class="filter fx-el--40 fx-el--g1 m--10 md-fx-od--0 xsm-fx-el--100" data-filter-type="number" data-filter-name='price' data-scale="breakpoints" data-label-selector=".filter-label" data-label-preset="price" data-breakpoints='
 					{
