Fixed tabs script

--- a/src/html/distance-services.html
+++ b/src/html/distance-services.html
@@ -260,8 +260,8 @@
 									Перечень документов
 								</h3>
 								<div class="operations__documentation-Link__list">
-									<a href="#" class="operations__documentation-link current-link" id="tarifs">Мобильный банк</a>
-									<a href="#" class="operations__documentation-link"
+									<a href="#" class="operations__documentation-link tabs-item current-link" id="tarifs">Мобильный банк</a>
+									<a href="#" class="operations__documentation-link tabs-item"
 										id="docs">Система «Интернет-банк»</a>
 								</div>
 							</div>
@@ -286,7 +286,7 @@
 										<div class="operations__documentation-content">
 											<H5 class="operations__documentation-description">
 												Перечень документов для заключения договора банковского
-												обслуживания 
+												обслуживания
 											</H5>
 											<p class="operations__documentation-caracter">
 												<a class="def-link" href="#">PDF, 279 КБ / 04 июня 2018</a>
