add news and Cheefs

--- a/src/html/garanty.html
+++ b/src/html/garanty.html
@@ -7,7 +7,7 @@
 		<section class="container">
 			<div>
 				<div class="second__text-credits__list">
-					<a class="second__text-credits" href="#">Главная /</a>
+					<a class="second__text-credits" href="./index.html">Главная /</a>
 					<a class="second__text-credits" href="./accountopen.html">Корпоративным клиентам /</a>
 					<a class="second__text-credits current-second__text-credits" href="./garanty.html">Аккредитивы и
 						гарантии</a>
