--- a/src/html/index.html
+++ b/src/html/index.html
@@ -104,12 +104,12 @@
                         ассоциации и ПАО
                         Московская Биржа. Банк МФК является членом Ассоциации российских банков (АРБ).
                     </p>
-                    <!-- <p class="about-card__text m--b-45" data-readmore-identifier="info-list-readmore">
+                    <p class="about-card__text m--b-45" data-readmore-identifier="info-list-readmore">
                         Банк МФК входит в <span class="text--dark-blue">систему обязательного страхования
                             вкладов</span>, участник Национальной финансовой
                         ассоциации и ПАО
                         Московская Биржа. Банк МФК является членом Ассоциации российских банков (АРБ).
-                    </p> -->
+                    </p>
                     <div class="document-list__read-more read-more__wrapper">
                         <div class="read-more readmore" id="info-list-readmore">
                             <span class="read-more__text-more">Читать больше</span>
@@ -119,8 +119,148 @@
                     </div>
                 </div>
             </div>
-            <div class="management"></div>
+            <div class="management">
+                <div class="management-wrap">
+                    <div class="management-title__wrapper">
+                        <div class="management-title__wrap">
+                            <h2 class="management-title">Руководство</h2>
+                        </div>
+                        <div class="management-decor border-gradient border-color-gradient"></div>
+                    </div>
+                    <div class="management-person__wrap">
+                        <div class="management-person">
+                            <div class="management-person__img management-person__img">
+                                <img src="../assets/img/images/Tatiana.jpg" alt="">
+                            </div>
+                            <div class="management-person__name">
+                                <span>Орлова Татьяна</span>
+                            </div>
+                        </div>
+                        <div class="management-person">
+                            <div class="management-person__img ">
+                                <img src="../assets/img/images/Ekaterina.jpg" alt="">
+                            </div>
+                            <div class="management-person__name">
+                                <span>Игнатова
+                                    Екатерина Сергеевна</span>
+                            </div>
+                        </div>
+                        <div class="management-person">
+                            <div class="management-person__img">
+                                <img src="../assets/img/images/Mikhail.jpg" alt="">
+                            </div>
+                            <div class="management-person__name">
+                                <span>Прохоров
+                                    Михаил Дмитриевич</span>
+                            </div>
+                        </div>
+                        <div class="management-person">
+                            <div class="management-person__img">
+                                <img src="../assets/img/images/Onexim.jpg" alt="">
+                            </div>
+                            <div class="management-person__name">
+                                <span>Onexim
+                                    Holdings Limited</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="management-decor border-gradient border-color-gradient"></div>
+                </div>
+            </div>
+            <div class="news">
+                <div class="news-wrap">
+                    <div class="news-title__wrap">
+                        <div class="news-title">
+                            <span class="news-title__text">Банк МФК</span>
+                        </div>
+                        <div class="news-title">
+                            <span class="news-title__text">Благотворительному Фонду ОНЭКСИМ</span>
+                        </div>
+                        <div class="news-title">
+                            <span class="news-title__text">Банковской Группы</span>
+                        </div>
+                    </div>
+                    <div class="news-content__wrap">
+                        <div class="content-general">
+                            <div class="content-general__item">
+                                <div class="content-general__picture">
+                                    <img src="../assets/img/images/base-general.jpg" alt="">
+                                </div>
+                                <div class="content-card__wrap">
+                                    <div class="content-card__title">
+                                        <span>Базовый вектор развития связывает нас с нашим прошлым</span>
+                                    </div>
+                                    <div class="content-card__text">
+                                        <p>Идейные соображения высшего порядка, а также социально-экономическое развитие
+                                        </p>
+                                    </div>
+                                    <div class="content-card__link">
+                                        <a class="content-card__link--text" href="#">Читать новость</a>
+                                        <svg width="10" height="15" viewBox="0 0 14 24" fill="none"
+                                            xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M1 1L12 12L1 23" stroke="#454545" stroke-width="2"
+                                                stroke-linecap="round" />
+                                        </svg>
+                                    </div>
+                                </div>
+                            </div>
 
+                        </div>
+                        <div class="content-rest">
+                            <div class="content-double">
+                                <div class="content-double__item">
+                                    <div class="content-card__wrap">
+                                        <div class="content-card__title">
+                                            <span>Постоянный количественный рост ни к чему нас не обязывает</span>
+                                        </div>
+                                        <div class="content-card__link">
+                                            <a class="content-card__link--text" href="">Читать новость</a>
+                                            <svg width="10" height="15" viewBox="0 0 14 24" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <path d="M1 1L12 12L1 23" stroke="#454545" stroke-width="2"
+                                                    stroke-linecap="round" />
+                                            </svg>
+                                        </div>
+                                        <div class="content-double__picture">
+                                            <img class="card-link__img" src="../assets/img/icons/circleArc.png" alt="">
+                                        </div>
+                                    </div>
+
+                                </div>
+                                <div class="news-button">
+                                    <a class="news-button__link" href="#">
+                                        <span class="news-button__link--text">Перейти к новостям</span>
+                                        <svg class="news-button__svg">
+                                            <use href="../assets/img/svg/sprite/symbol-defs.svg#icon-next"></use>
+                                        </svg>
+                                    </a>
+
+                                </div>
+                            </div>
+                            <div class="content-simple">
+                                <div class="content-simple__picture">
+                                    <img src="../assets/img/images/structure.jpg" alt="">
+                                </div>
+                                <div class="content-simple__item">
+                                    <div class="content-card__wrap content-card__wrap--height">
+                                        <div class="content-card__title">
+                                            <span>Сложившаяся структура организации ни к чему нас не обязывает</span>
+                                        </div>
+                                        <div class="content-card__link">
+                                            <a class="content-card__link--text" href="">Читать новость</a>
+                                            <svg width="10" height="15" viewBox="0 0 14 24" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <path d="M1 1L12 12L1 23" stroke="#454545" stroke-width="2"
+                                                    stroke-linecap="round" />
+                                            </svg>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
